--- a/application.properties
+++ b/application.properties
@@ -10,6 +10,10 @@ email=praveen.somireddy@gmail.com
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
 
+spring.datasource.url=jdbc:mysql://db4free.net:3306/springbairflight
+spring.datasource.username=sriniuser
+spring.datasource.password=srinipwd
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.jpa.hibernate.ddl-auto=update
