--- a/price-service.properties
+++ b/price-service.properties
@@ -13,6 +13,6 @@ management.security.enabled=false
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:mysql://db4free.net:3306/springbairflight
-spring.datasource.username=sriniuser
-spring.datasource.password=srinipwd
+#spring.datasource.url=jdbc:mysql://db4free.net:3306/springbairflight
+#spring.datasource.username=sriniuser
+#spring.datasource.password=srinipwd
