--- a/ribbon-orderservice.properties
+++ b/ribbon-orderservice.properties
@@ -3,7 +3,7 @@ management.endpoints.web.exposure.include=*
 spring.cloud.config.uri=http://localhost:8888 
 management.security.enabled=false
 
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.service-url.default-zone=http://localhost:8761
 cart-service.ribbon.listOfServers=localhost:2222, localhost:2223, localhost:2224, localhost:2225,localhost:2226
 feign.client.config.default.connectTimeout: 160000000
 feign.client.config.default.readTimeout: 160000000
