--- a/ribbon-orderservice.properties
+++ b/ribbon-orderservice.properties
@@ -4,7 +4,7 @@ spring.cloud.config.uri=http://localhost:8888
 management.security.enabled=false
 
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
-cart-service.ribbon.listOfServers=localhost:2222, localhost:2223, localhost:2224, localhost:2225,localhost:2226
+#cart-service.ribbon.listOfServers=localhost:2222, localhost:2223, localhost:2224, localhost:2225,localhost:2226
 feign.client.config.default.connectTimeout: 160000000
 feign.client.config.default.readTimeout: 160000000
 # Database configuration properties takes from application.properties
