--- a/price-service.properties
+++ b/price-service.properties
@@ -2,6 +2,7 @@
 management.endpoints.web.exposure.include=*
 spring.cloud.config.uri=http://localhost:8888 
 management.security.enabled=false
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
 # Database configuration properties takes from application.properties
 # MySQL settings
